zm_app/public/css/style.css
body, html {
  background: #d14414;  
  color     : #fff;
  font-family: 'Lato', sans-serif;
  font-weight: normal;
  height: 100%;  
  width   : 100%;
}
.wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -55px; /* the bottom margin is the negative value of the footer's height */
}
.footer, .push {
  height: 55px; /* .push must be the same height as .footer */
  padding-left: 3em;
}
.advanced {
  margin-left : 2em;
}
legend {
  color       : #fff;
}
a.bigbutton {
  color: rgba(255,255,255,0.5);
  font-size   : 48pt;
  display     : inline-block;
  margin-top  : 40pt;
}
a.bigbutton:hover {
  color       : #fff;
}
a.nojs {
  color       : #fff;
}
.head {
  width   : 100%;
  /*border  : 1px solid #fff;
  border-width  : 0 0 1px 0;
  padding-left  : 1cm; */
}
.navigation {
  font-family: 'Lato', sans-serif;
  position : relative;
  /* margin-top  : 1cm;*/
}
.navigation.inverse {
  background  : #d14414 !important;
  padding     : 5px 15px 0 35px;
  border-radius: 5px 5px 0 0;
}
.menuitem {
    display: inline-block;
    font-size: 11pt;
    /* padding-bottom: 5px; */
    position: relative;
    text-align: center;
    z-index: 3;
    margin-right: 60px;
}
.menuitem:last-child{margin-right: 0;}
.menuitem:after{
    width: 9px;
    height: 8px;
    border-width: 0;
    /* border-style: solid; */
    /* border-color: transparent transparent #fff transparent; */
    content: " ";
    position: absolute;
    display: inline-block;
    top: 7px;
    left: -10px;
    background-color: #FFF;
}
.menuitem.active:after {
    width: 9px;
    height: 8px;
    border-width: 0;
    /* border-style: solid; */
    /* border-color: transparent transparent #fff transparent; */
    content: " ";
    position: absolute;
    display: inline-block;
    top: 7px;
    left: -10px;
    background-color: #FFF;
}
.menuitem a {
  color       : #fff;
  padding-left: 7px;
  position: relative;
  text-decoration: none;
  text-transform: uppercase;
}
.navigation.inverse .menuitem a {
  color       : #fff;
}
.shadow {
}
#container {
  width   : 100%;
}
.item {
  padding : 1px;
}
.item.w10 {
  width   : 100px;
  height  : 100px;
}
.item.w20 {
  width   : 200px;
  height  : 200px;
}
.item.w30 {
  width   : 300px;
  height  : 300px;
}
.item.w40 {
  width   : 400px;
  height  : 400px;
}
.item img {
  width   : 100%;
  height  : auto;
}
.item .item-image {
  background-size: cover;
  width   : 100%;
  height  : 100%;
  margin  : 0;
  padding : 0;
}
.item .item-title {
  position  : absolute;
  background: rgba(0,0,0,.5);
  color     : #fff;
  padding   : 6px;
  padding-left: 16px !important;
  bottom    : 0px;
  left      : 1px;
  right     : 1px;
}
.item.w10 .item-title{
  font-size : 8pt;
}
.item.w20 .item-title{
  font-size : 12pt;
}
.item.w30 .item-title{
  font-size : 18pt;
}
.item.w40 .item-title{
  font-size : 24pt;
}
.item.w50 .item-title{
  font-size : 32pt;
}
a.header-a {
  display   : inline-block;
  color     : #555;
  font-size : 32pt;
  position  : relative;
  top       : 12px;
}

.result {
  background:white;
  border-radius: 5px;
  width     : 100%;
  min-width : 500px;
  min-height: 150px;
  color     : black;
  padding   : 2em;
}
.result:after{
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 40px 40px 40px 0px;
  border-color: transparent #fff transparent transparent;
  content     : " ";
  position    : absolute;
  display     : inline-block;
  top         : 40px;
  left        : -25px;
}

.history-error, .history-critical { color:red; }
.history-warning { color:#F88017; }
.history-ok { color:green; }

.nl { display: block; text-align: left;margin-bottom:1px;padding:2px;}
.result .alert{ padding:3px; background-color: rgba(209,68,20,0.15); border-color: transparent;}
.alert-critical,.alert-error { background: red;}
.alert-notice { background: green;}
.text-check { color : #0a0;}
.text-ban { color : #a00; }
.btn-link { color : #ddf; }
.btn-link:hover { color : #fff; }
.loading { width:64px;height:64px;background-image: url("/images/loading.gif");}
label {
	white-space:nowrap;
	font-size :8pt;
}

/* Updated on 27 Feb 2017 */
.choose-lang {background-color: #717073;	height: 40px; padding: 12px 50px 0 0;}
.choose-lang lang {margin-right: 5px;}
.choose-lang lang:last-child {margin-right: 0;}
.choose-lang lang a > span{background-image: url(../images/flags.png); background-repeat: no-repeat; display: inline-block; height: 14px; text-indent: -999px; overflow: hidden; width: 19px;}
.choose-lang lang:first-child a > span{background-position: 0 0;}
.choose-lang lang:nth-child(2) a > span{background-position: -26px 0;}
.choose-lang lang:last-child a > span{background-position: -51px 0;}
.brand {background-color: #FFF; height: 116px; padding: 35px 0 0 52px;}
.nav{padding: 35px 0 35px 48px;}
.menuitem.active:before { background-color: #FFF; content: ''; position: absolute;  height: 1px; width: 38px; left: -48px; top: 14px;}
.footer-ip {float: left; font-family: 'Lato', sans-serif; font-size: 12pt; position: relative;}
.footer-ip:before {background-color: #FFF; content: ''; position: absolute; height: 1px; width: 110%; bottom: -13px; left: -54px;}
.footer-ip:after { background-color: #FFF; content: ''; position: absolute; right: 0; bottom: -20px; width: 9px; height: 8px;}
.btn-primary {background-color: #d14414; border-color: #be3f13;}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {background-color: #be3f13; border-color: #d14414;}
.mt-10 {margin-top: 10px;}
.alert-dnssec-test-error { background: #FF0000 !important;}
.alert-dnssec-test-success { background: #008000 !important;}

